Optimize dark mode, add animations, fix layout

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
 
-body {font-family: Montserrat, sans-serif;}
-
-p {
-  margin: 0;
-  padding: 0;
-}
+body {font-family: Montserrat, sans-serif; padding: 0; margin: 0;}
+section { margin-top: -10px; /* To fix section gap */}
+p { margin: 0; padding: 0; }
 
 
 
@@ -21,26 +18,27 @@ p {
   background-color: #0d1117;
   color: #f0f0f0;
 }
+.darkmode-hero{
+  background: rgb(13,17,23);
+  background: linear-gradient(180deg, rgba(84,80,96,1) 0%, rgba(46,48,58,1) 65%, rgba(13,17,23,1) 100%);
+}
+.darkmode-about-me{
+  background: rgb(13,17,23);
+  background: linear-gradient(180deg, rgba(13,17,23,1) 0%, rgba(46,48,58,1) 65%, rgba(13,17,23,1) 100%);
+}
+.darkmode-skills{
+  background: rgb(13,17,23);
+  background: linear-gradient(180deg, rgba(13,17,23,1) 0%, rgba(46,48,58,1) 65%, rgba(84,80,96,1) 100%);
+}
+.darkmode-projects{
+  background: rgb(13,17,23);
+  background: linear-gradient(180deg, rgba(84,80,96,1) 0%, rgba(46,48,58,1) 65%, rgba(13,17,23,1) 100%);
+}
+.darkmode-contact-me{}
+.darkmode-footer{}
 
-#dark-mode-toggle{
-  /* not responsive */
-  /* position: absolute;
-  bottom: 0;
-  left: -5%; */
-  width: 200px;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  background-color: transparent;
-}
-.dark-mode-toggle-image{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: 0.5s ease-out;
-}
+
+
 .turn-toggle-img{
   transform: rotate(180deg);
 }
@@ -51,7 +49,30 @@ p {
 #hero{
   position: relative;
 }
-
+#dark-mode-toggle{
+  /* not responsive */
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  bottom: 30px;
+  left: -100px;
+  width: 200px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: transparent;
+}
+.dark-mode-toggle-image{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-color: transparent;
+  transition: 0.5s ease-out;
+}
 
 
 
@@ -78,10 +99,13 @@ p {
 }
 .main-color-theme{
   color: #67cae1 ;
+  /* #BB871E bu da güzel turuncu */
+  /* #DEA01E inanılmaz güzel gidiyor */
   /* color: #167298 !important; yedek */
   /* color: #2dc9fc !important yedek; */
   /* color: #89d0f0 !important hover not; */
   /* color: #67cae1 !important güzel açık mavi; */
+  /* #DBF2FF tüm text için güzel olabilir */
 
 }
 
@@ -132,6 +156,8 @@ p {
 .project-detail { margin-bottom: 5%; }
 .project-extra-info-box {} /* Not styled yet */
 .project-extra-info {} /* Not styled yet */
+.project-extra-info-link { color: #67cae1 !important; text-decoration: none; }
+.project-extra-info-link:hover{ color: #097CB8 !important; }
 .project-buttons-box {
   justify-content: center;   /* Maybe space-evenly is better */
   align-items: center;
